Remove left and right padding to fix full width align issues on some elements

--- a/assets/src/css/site/components/_component-main.scss
+++ b/assets/src/css/site/components/_component-main.scss
@@ -13,8 +13,6 @@
     overflow-x: hidden;
     width: 100%;
     height: 100%;
-    padding-top: var(--wp--style--root--padding-left); 
-    padding-right: var(--wp--style--root--padding-right);
+    padding-top: var(--wp--style--root--padding-left);
     padding-bottom: var(--wp--style--root--padding-bottom);
-    padding-left: var(--wp--style--root--padding-left);
 }
